# TVM-Compiler

./: .gitignore  CHANGELOG.md  Dockerfile  Jenkinsfile  Makefile  README.md  deps_map.json  install.sh  package.sh  prerequesites.sh
clang/: CMakeLists.txt
clang/lib/AST/: ASTContext.cpp  DeclCXX.cpp  DeclTemplate.cpp  Expr.cpp  ExprConstant.cpp  ItaniumMangle.cpp  MicrosoftMangle.cpp  NSAPI.cpp  RecordLayoutBuilder.cpp  Type.cpp  TypeLoc.cpp
clang/lib/Basic/: CMakeLists.txt  TargetInfo.cpp  Targets.cpp  Version.cpp
clang/lib/CodeGen/: BackendUtil.cpp  CGAtomic.cpp  CGBlocks.cpp  CGBuilder.h  CGBuiltin.cpp  CGCXXABI.cpp  CGCall.cpp  CGClass.cpp  CGCleanup.cpp  CGCoroutine.cpp  CGDebugInfo.cpp  CGDecl.cpp  CGDeclCXX.cpp  CGException.cpp  CGExpr.cpp  CGExprAgg.cpp  CGExprCXX.cpp  CGExprConstant.cpp  CGExprScalar.cpp  CGGPUBuiltin.cpp  CGNonTrivialStruct.cpp  CGObjC.cpp  CGObjCGNU.cpp  CGObjCMac.cpp  CGObjCRuntime.cpp  CGOpenMPRuntime.cpp  CGOpenMPRuntimeGPU.cpp  CGRecordLayout.h  CGStmt.cpp  CGStmtOpenMP.cpp  CGVTT.cpp  CGVTables.cpp  CodeGenAction.cpp  CodeGenFunction.cpp  CodeGenModule.cpp  CodeGenPGO.cpp  CodeGenTypeCache.h  CodeGenTypes.cpp  CoverageMappingGen.cpp  ItaniumCXXABI.cpp  (+4 more)
clang/lib/Driver/: CMakeLists.txt  Driver.cpp  ToolChain.cpp  Types.cpp
clang/lib/Frontend/: CMakeLists.txt  CompilerInvocation.cpp  FrontendActions.cpp  FrontendOptions.cpp  InitPreprocessor.cpp  TVMImportJsonAbi.cpp
clang/lib/FrontendTool/: ExecuteCompilerInvocation.cpp
clang/lib/Index/: USRGeneration.cpp
clang/lib/Lex/: LiteralSupport.cpp
clang/lib/Parse/: ParseDecl.cpp
clang/lib/Sema/: Sema.cpp  SemaCast.cpp  SemaCoroutine.cpp  SemaDecl.cpp  SemaDeclAttr.cpp  SemaDeclCXX.cpp  SemaExpr.cpp  SemaInit.cpp  SemaLookup.cpp  SemaOverload.cpp  SemaTemplate.cpp  SemaTemplateInstantiateDecl.cpp
clang/lib/Serialization/: ASTCommon.cpp  ASTReader.cpp  (+1 more)
cmake/Cache/: ton-compiler-alone.cmake  ton-compiler.cmake  tools.cmake
docs/: C++ tutorial.md  installtools.md  testing.md
llvm/: .gitignore  CMakeLists.txt
llvm/cmake/: config-ix.cmake
llvm/projects/: CMakeLists.txt
llvm/projects/ton-compiler/: .gitignore  CMakeLists.txt  abi_parser.py  stdlib_c.tvm
llvm/projects/ton-compiler/cpp-sdk/: CMakeLists.txt
llvm/projects/ton-compiler/cpp-sdk/boost/: config.hpp
llvm/projects/ton-compiler/cpp-sdk/nil/crypto3/zk/: proving_key.hpp  verification_key.hpp
llvm/projects/ton-compiler/cpp-sdk/sha256_literal/: sha256_literal.h
llvm/projects/ton-compiler/cpp-sdk/std/: __config  tuple  type_traits  utility  variant
llvm/projects/ton-compiler/cpp-sdk/tvm/: .chain_builder.hpp.swp  .contract.hpp.swl  .contract.hpp.swm  .contract.hpp.swn  .contract.hpp.swo  .contract.hpp.swp  .contract_handle.hpp.swo  .msg_address.inline.hpp.swp  .parser.hpp.swo  .parser.hpp.swp  .smart_switcher.hpp.swo  .smart_switcher.hpp.swp  Console.hpp  ElementRef.hpp  awaiting_responses_map.hpp  big_dict_traits.hpp  big_queue.hpp  builder.hpp  cell.hpp  chain_builder.hpp  chain_tuple.hpp  contract.hpp  contract_handle.hpp  debot.hpp  default_support_functions.hpp  dict_array.hpp  dict_base.hpp  dict_map.hpp  dict_set.hpp  dict_traits.hpp  dictionary.hpp  dictionary_array_iterator.hpp  dictionary_const_iterator.hpp  dictionary_map_const_iterator.hpp  dictionary_map_iterator.hpp  error_code.hpp  from_dictionary.hpp  func_id.hpp  globals.hpp  is_tuple.hpp  (+29 more)
llvm/projects/ton-compiler/cpp-sdk/tvm/container/: intrusive.hpp  intrusive_queue.hpp  refs_info.hpp  tuple_array.hpp
llvm/projects/ton-compiler/cpp-sdk/tvm/etl/: etl.pro
llvm/projects/ton-compiler/cpp-sdk/tvm/replay_attack_protection/: rolling_ids.hpp  timestamp.hpp
llvm/projects/ton-compiler/cpp-sdk/tvm/schema/: .basics.hpp.swo  .basics.hpp.swp  .make_parser.hpp.swo  .make_parser.hpp.swp  abiv1.hpp  abiv2.hpp  basics.hpp  build_chain_static.hpp  chain_builder.hpp  chain_fold.hpp  chain_tuple.hpp  chain_tuple_printer.hpp  estimate_element.hpp  get_bitsize.hpp  is_expandable.hpp  json-abi-gen.hpp  make_builder.hpp  make_parser.hpp  message.hpp  parse_chain_static.hpp  scheme_parser.hpp
llvm/projects/ton-compiler/cpp-sdk/tvm/schema/builder/: dynamic_field_builder.hpp  struct_builder.hpp  variant_builder.hpp
llvm/projects/ton-compiler/cpp-sdk/tvm/schema/parser/: dynamic_field_parser.hpp  struct_parser.hpp  variant_parser.hpp
llvm/projects/ton-compiler/ton-sdk/: .arguments.h.swp  .constructor.h.swp  .define-ton-struct-c.inc.swn  .define-ton-struct-c.inc.swp  .define-ton-struct-header.inc.swp  .messages.c.swl  .messages.c.swm  .messages.c.swn  .messages.c.swo  .smart-contract-info.c.swp  .smart-contract-info.h.swp  .tvm.c.swo  .tvm.c.swp  .tvm.h.swo  .tvm.h.swp  address.h  define-ton-struct-c.inc  define-ton-struct-c.inc.orig  define-ton-struct-header.inc  messages.c  messages.c.orig  messages.h  messages.h.orig  smart-contract-info.h  tvm.c  tvm.h
llvm/projects/ton-compiler/tvm_linker/src/tvm_linker-stamp/: tvm_linker-gitinfo.txt
llvm/projects/ton-compiler/tvm_linker/tmp/: tvm_linker-cfgcmd.txt  tvm_linker-gitclone.cmake  tvm_linker-gitupdate.cmake
llvm/tools/: CMakeLists.txt  LLVMBuild.txt
llvm/tools/tvm-build/: CMakeLists.txt  tvm-build++.py  tvm-build.py
llvm/utils/llvm-lit/: CMakeLists.txt
samples/: ack.c  attribute.c  deg.c  erc20-demo.cpp  erc20.c  fact.c  list-length.c  map.h  pair.c  pair_pointer.c  piggybank.c  piggybank_adapted.c  select-sort-array.c  stdlib_c.tvm  tvm_std.h  tvm_std.ll  tvs_sdk.h
samples/sdk-prototype/: abi_parser.py  add_mul.abi  add_mul.c  debug_emulation.c  euclid_gcd.abi  euclid_gcd.c  hello_world.abi  hello_world.c  hello_world_reply.c  piggybank.abi  piggybank.c  stdlib_c.tvm  transfer-80000001.c  wallet.abi  wallet.c
stdlib/: abi_parser.py  stdlib_c.tvm  stdlib_cpp.tvm
stdlib/cpp-sdk/: builder.hpp  msg_address.hpp  parser.hpp  smart_contract_info.hpp  tuple.hpp  untuple_caller.hpp  untuple_cases.def
stdlib/ton-sdk/: address.inc  datatype.inc  define-ton-struct-c.inc  define-ton-struct-header.inc  messages.c  messages.h  messages.inc  smart-contract-info.c  smart-contract-info.inc  tvm.c  tvm.h
(+1012 files in other folders)
